# app/Http/Requests/StoreTransformationRequest.php
@@ -30,16 +30,16 @@ class StoreTransformationRequest extends FormRequest
 
             'inputs' => ['array' ,'min:1'],
             'inputs.*.id' => ['integer' ,'required' ],
-            'inputs.*.value0' => ['numeric' ,'nullable' , 'min:0'],
-            'inputs.*.value1' => ['numeric' ,'nullable' , 'min:0'],
-            'inputs.*.value2' => ['numeric' ,'nullable' , 'min:0'],
+            'inputs.*.value0' => ['numeric' ,'required' , 'min:0'],
+            'inputs.*.value1' => ['numeric' ,'required' , 'min:0'],
+            'inputs.*.value2' => ['numeric','required'  , 'min:0'],
 
 
             'outputs' => ['array' ,'min:1'],
             'outputs.*.id' => ['numeric' ,'required' ],
-            'outputs.*.value0' => ['numeric'  , 'min:0'],
-            'outputs.*.value1' => ['numeric'   , 'min:0'],
-            'outputs.*.value2' => ['numeric' , 'min:0'],
+            'outputs.*.value0' => ['numeric'  ,'required', 'min:0'],
+            'outputs.*.value1' => ['numeric'  ,'required' , 'min:0'],
+            'outputs.*.value2' => ['numeric' ,'required' , 'min:0'],
 
 
 
